# amplifier-web

./: .gitignore  ARCHITECTURE.md  HANDOFF.md  ORIGINAL_PLAN.md  README.md  package-lock.json  package.json
backend/: .env.example  pyproject.toml
backend/amplifier_web/: __init__.py  auth.py  bundle_manager.py  cli.py  database.py  extract.py  main.py  preferences.py  security.py  session_manager.py  tls.py
backend/amplifier_web/api/: __init__.py
backend/amplifier_web/protocols/: __init__.py  approval.py  display.py  hooks.py  spawn.py  write_approval_hook.py
backend/tests/: __init__.py  test_security.py
docs/archive/: ORIGINAL_PLAN.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/Artifacts/: ArtifactsPanel.tsx
frontend/src/components/Auth/: LoginModal.tsx
frontend/src/components/Chat/: ChatContainer.tsx  InputArea.tsx  MessageBubble.tsx  MessageList.tsx
frontend/src/components/Config/: ConfigPanel.tsx
frontend/src/components/Sessions/: SessionList.tsx  SessionSidebar.tsx
frontend/src/components/Tools/: ApprovalModal.tsx  ToolCallCard.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/stores/: authStore.ts  prefsStore.ts  sessionStore.ts
frontend/src/types/: amplifier.ts
