[project]
name = "amplifier-web"
version = "0.1.0"
description = "Web interface for Microsoft Amplifier AI agent system"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.12",
    "click>=8.0.0",
    "cryptography>=42.0.0",
    "pymupdf>=1.24.0",  # PDF text extraction
    "python-docx>=1.1.0",  # DOCX text extraction
    "amplifier-core",
    "amplifier-foundation",
    "amplifier-module-provider-anthropic",
]

[project.scripts]
amplifier-web = "amplifier_web.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_web"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }
amplifier-foundation = { git = "https://github.com/microsoft/amplifier-foundation", branch = "main" }
amplifier-module-provider-anthropic = { git = "https://github.com/microsoft/amplifier-module-provider-anthropic", branch = "main" }
